Add ganache-cli and truffle into the package.

--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "zeppelin-solidity": "1.6.0"
+  },
+  "devDependencies": {
+    "ganache-cli": "^6.1.0-beta.0",
+    "truffle": "^4.0.5"
   }
 }
