--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "web3-utils": "^1.0.0-beta.30",
     "zeppelin-solidity": "1.6.0"
   },
   "devDependencies": {
