--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "solhint": "^1.1.10",
     "web3-utils": "^1.0.0-beta.30",
     "zeppelin-solidity": "1.6.0"
   },
   "devDependencies": {
     "ganache-cli": "^6.1.0-beta.0",
-    "solium": "^1.1.5",
     "truffle": "^4.0.5"
   }
 }
