Add hdwallet provider. Setup truffle.js to deploy to rinkeby net through infura.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "solhint": "^1.1.10",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3-utils": "^1.0.0-beta.30",
     "zeppelin-solidity": "1.6.0"
   },
